--- a/prj.conf
+++ b/prj.conf
@@ -1,11 +1,11 @@
-CONFIG_SOC_SERIES_NRF52X=y
-CONFIG_SOC_NRF52840_QFAA=y
-CONFIG_USE_SEGGER_RTT=y
+# CONFIG_BT_SMP=y
 CONFIG_GPIO=y
 
+## Ensure an MCUboot-compatible binary is generated.
+CONFIG_BOOTLOADER_MCUBOOT=y
+
 CONFIG_BT=y
-# needed?
-CONFIG_BT_SMP=y
+CONFIG_BT_DEVICE_NAME="Device1235"
 CONFIG_BT_PERIPHERAL=y
 
 # Allow for large Bluetooth data packets.
@@ -21,30 +21,29 @@ CONFIG_MCUMGR_TRANSPORT_BT_CONN_PARAM_CONTROL=y
 
 CONFIG_MCUMGR_TRANSPORT_BT_REASSEMBLY=y
 CONFIG_MCUMGR_TRANSPORT_NETBUF_SIZE=2475
+
+CONFIG_MCUMGR_GRP_OS=y
+# enable MCUMGR Parameters retrieval command
 CONFIG_MCUMGR_GRP_OS_MCUMGR_PARAMS=y
 CONFIG_MCUMGR_TRANSPORT_WORKQUEUE_STACK_SIZE=4608
+CONFIG_NCS_SAMPLE_MCUMGR_BT_OTA_DFU=y
 
-CONFIG_NRFX_NVMC=y
 CONFIG_NET_BUF=y
 CONFIG_ZCBOR=y
 #CONFIG_CRC=y
 CONFIG_MCUMGR=y
 CONFIG_STREAM_FLASH=y
 CONFIG_FLASH_MAP=y
+CONFIG_FLASH=y
 
 # Some command handlers require a large stack.
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2304
 CONFIG_MAIN_STACK_SIZE=2048
 # CONFIG_MAIN_STACK_SIZE=4096
 
-## Ensure an MCUboot-compatible binary is generated.
-CONFIG_BOOTLOADER_MCUBOOT=y
-#
-## Enable flash operations.
-CONFIG_FLASH=y
-
-CONFIG_BT_HCI_CORE_LOG_LEVEL_WRN=y
-CONFIG_BT_HCI_DRIVER_LOG_LEVEL_WRN=y
+# never did anything?? idk i swear it used to...
+# CONFIG_BT_HCI_CORE_LOG_LEVEL_WRN=y
+# CONFIG_BT_HCI_DRIVER_LOG_LEVEL_WRN=y
 
 # enable STDOUT as early as possible for debugging accuracy
 CONFIG_EARLY_CONSOLE=y
@@ -54,6 +53,7 @@ CONFIG_PINCTRL=y
 CONFIG_CLOCK_CONTROL=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 CONFIG_DEBUG_OPTIMIZATIONS=y
+CONFIG_LOG=y
 
 ## Enable the storage erase command.
 #CONFIG_MCUMGR_GRP_ZBASIC=y
